# semantic-pdf-rag

./: .gitignore  LICENSE  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
cli/: main.py
core/prompts/: rag_prompt.py
core/token_optimization/: token_budget_estimator.py  token_optimizer.py
core/use_cases/: ingest_pdf.py
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  DEVELOPMENT_PLAN.md  RAG_FLOW.md  TOKEN_STRATEGY.md
docs/adr/: 001-use-pgvector.md  002-adopt-clean-architecture.md  003-token-optimization-strategy-layer.md  004-provider-agnostic-llm-design.md  005-cli-first-design.md  006-adopt-langchain.md  README.md
domain/entities/: document.py
domain/ports/: embedding_port.py  llm_port.py  pdf_loader_port.py  vector_store_port.py
infra/: factory.py
infra/bootstrap/: container.py
infra/config/: settings.py
infra/embeddings/: gemini_embedding.py  openai_embedding.py
infra/loaders/: pdf_loader.py  text_chunker.py
infra/persistence/: pgvector_repository.py
infra/vector_store/: pgvector_store.py
tests/: conftest.py
tests/integration/: test_pgvector_store_integration.py
tests/unit/: test_factory.py  test_gemini_embedding.py  test_ingest_use_case.py  test_openai_embedding.py  test_pdf_loader.py  test_pgvector_store.py  test_rag_prompt.py  test_settings.py  test_text_chunker.py  test_token_optimizer.py
